modal overflow solved

--- a/src/modal/modal.css
+++ b/src/modal/modal.css
@@ -1,5 +1,6 @@
 .modal-window {
     position: fixed;
+    overflow: auto;
     top: 0;
     left:0;
     width:100%;
@@ -17,6 +18,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
 }
 
 .modal-container img {
@@ -43,6 +45,7 @@
     color: white;
     font-weight: bold;
     cursor: pointer;
+    text-align: center;
 }
 
 .modal-container p, label{
